# redirect-webfinger

./: .gitignore  Containerfile  Dockerfile  Makefile  README.rst  disperse.conf  pyproject.toml  serve.py  setup.cfg  test_redirect_webfinger.py
.github/workflows/: container.yml  pythonpackage.yml
redirect_webfinger/: __init__.py  __main__.py
