[metadata]
name = redirect-webfinger
description = Basic implementation of webfinger that redirects to another server
long_description = file:README.rst
version = attr:redirect_webfinger.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
license = Apachev2
url = https://github.com/jelmer/redirect-webfinger
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache v2
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
install_requires =
    aiohttp
    aiohttp_openmetrics
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    redirect-webfinger = redirect_webfinger.__main__:main

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1
